--- a/styles/index.css
+++ b/styles/index.css
@@ -1,23 +1,46 @@
-.div--principal {
-  background-color: #f5f5f5;
-  border: 1px solid #e5e5e5;
-  border-radius: 4px;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-  margin-top: 5%;
-  margin-left: 5%;
-  margin-right: 5%;
+.parent {
+  display: grid;
+  grid-template-areas: 'header' 'main' 'footer';
+  min-height: 100vh;
+  grid-template-rows: 80px 1fr 80px;
 }
 
-.card--style {
-  border: none !important;
-  background-color: transparent;
+.grid-container div {
+  background-color: antiquewhite;
+  text-align: center;
+  color: rgb(27, 8, 8);
+  outline: 1px solid black;
+  height: 100%;
 }
 
-.btn--color {
-  background-color: rgb(40, 157, 253);
-  color: white;
+article {
+  outline: 1px solid black;
 }
 
-.width--img {
-  max-width: 50%;
+header {
+  grid-area: header;
+  grid-row: inherit;
+  background-color: antiquewhite;
+  text-align: center;
+  color: rgb(27, 8, 8);
+  outline: 1px solid black;
+}
+
+.div2 {
+  grid-area: main;
+  height: 100%;
+}
+
+.div3 {
+  grid-area: footer;
+}
+
+.div-main {
+  justify-content: center;
+}
+
+.div-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
