--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css');
+
 html,
 body {
   padding: 0;
@@ -13,4 +15,9 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+i {
+  font-size: 2rem;
+  margin-right: 5px;
 }
