--- a/styles/login.css
+++ b/styles/login.css
@@ -16,6 +16,7 @@
 
 .login {
   width: 50%;
+  min-width: 300px;
   height: auto;
   background: #f1fff9;
   border-radius: 10px;
@@ -92,4 +93,38 @@
 
 .no--account p {
   margin: 0;
+}
+
+@media (max-width: 940px) {
+  .login {
+    margin: 50px auto;
+  }
+  .form {
+    flex-direction: column;
+    gap: 30px;
+  }
+}
+
+@media (max-width: 600px) {
+  .login {
+    width: 70%;
+  }
+}
+
+@media (max-width: 415px) {
+  .login {
+    width: 80%;
+  }
+  .welcome h1 {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 375px) {
+  .login {
+    width: 90%;
+  }
+  .welcome h1 {
+    font-size: 16px;
+  }
 }
