--- a/styles/index.css
+++ b/styles/index.css
@@ -25,19 +25,35 @@ aside {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: 300px;
 }
 header {
   grid-column: 1 / -1;
   justify-content: space-between;
 }
 
-header .div-btn-lg-sup .btn-lg-sup {
+header .div-btn-lg-sup {
   display: flex;
 }
 
 header .btn-lg-sup {
   background: #386b43;
   color: #fff;
+  border: none;
+  font-size: 14px;
+  border-radius: 5px;
+  padding: 3px 6px;
+}
+
+header .div-btn-lg-sup .div-icon-lg {
+  border: none;
+  background: transparent;
+}
+
+header .div-btn-lg-sup .div-icon-lg .icon-lg {
+  margin: 0;
+  font-size: 2rem;
+  color: #386b43;
 }
 
 main {
@@ -194,8 +210,7 @@ footer p i {
 }
 
 @media (max-width: 400px) {
-  header h1,
-  header .div-btn-lg-sup .icon-lg {
+  header h1 {
     font-size: 20px;
   }
   header h1 i {
@@ -216,5 +231,8 @@ footer p i {
   }
   header h1 i {
     font-size: 16px;
+  }
+  header .div-btn-lg-sup .div-icon-lg .icon-lg {
+    font-size: 0.9rem;
   }
 }
