--- a/styles/index.css
+++ b/styles/index.css
@@ -32,6 +32,11 @@ header {
   justify-content: space-between;
 }
 
+header .pensiones-app {
+  text-decoration: none;
+  color: #386b43;
+}
+
 header .div-btn-lg-sup {
   display: flex;
 }
@@ -85,6 +90,15 @@ main {
   text-align: center;
 }
 
+.rg-as-homeowner {
+  color: #0d6efd;
+  text-decoration: underline;
+}
+
+.rg-as-homeowner:hover {
+  cursor: pointer;
+}
+
 .buttons {
   gap: 50px;
 }
@@ -116,8 +130,9 @@ footer p {
 }
 
 footer p i {
-  font-size: 12px;
+  font-size: 10px;
   margin: 0;
+  text-align: center;
 }
 
 @media (max-width: 1000px) {
