--- a/styles/register.css
+++ b/styles/register.css
@@ -24,13 +24,13 @@
   padding: 15px 30px;
 }
 
-.title {
+.register .title {
   color: #386b43;
   justify-content: center;
   padding: 15px 0;
 }
 
-.title h1 {
+.register .title h1 {
   margin: 0;
   text-align: center;
   font-size: 25px;
@@ -80,7 +80,7 @@
 }
 
 @media (max-width: 940px) {
-  .title h1 {
+  .register .title h1 {
     font-size: 20px;
   }
 }
@@ -95,7 +95,7 @@
 }
 
 @media (max-width: 680px) {
-  .title h1 {
+  .register .title h1 {
     font-size: 16px;
   }
 }
