--- a/styles/add-pension.css
+++ b/styles/add-pension.css
@@ -11,6 +11,15 @@
   height: auto;
   background: #f1fff9;
   border-radius: 10px;
+  margin: 40px auto;
+  justify-content: center;
+  padding: 15px 30px;
+}
+
+.container-add-pension .map {
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
   margin: 0 auto;
   justify-content: center;
   padding: 15px 30px;
