--- a/styles/content-profile.css
+++ b/styles/content-profile.css
@@ -33,6 +33,15 @@
   height: 100%;
 }
 
+.container-profile .photo-profile {
+  width: 40%;
+}
+
+.container-profile .photo-profile img {
+  width: 100%;
+  border-radius: 50%;
+}
+
 .content-profile {
   gap: 30px;
 }
@@ -42,6 +51,7 @@
   margin: 0;
   text-align: center;
   font-size: 16px;
+  width: 100%;
 }
 
 .container-profile .icon-edit-profile a {
@@ -70,4 +80,17 @@
   color: #fff;
   padding: 0 8px 4px;
   border-radius: 5px;
+}
+
+@media (max-width: 930px) {
+  .content-profile p,
+  .content-profile a {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 600px) {
+  .container-profile {
+    width: 70%;
+  }
 }
