--- a/styles/home.css
+++ b/styles/home.css
@@ -138,15 +138,27 @@ input[type='search'] {
   }
 }
 
+@media (max-width: 600px) {
+  .container-home .title h1 {
+    font-size: 20px;
+  }
+}
+
 @media (max-width: 500px) {
   .container-home {
-    padding: 30px 120px;
+    padding: 30px 110px;
+  }
+  .container-home .title h1 {
+    font-size: 18px;
   }
 }
 
 @media (max-width: 465px) {
   .container-home {
     padding: 30px 100px;
+  }
+  .container-home .title h1 {
+    font-size: 16px;
   }
 }
 
